2015-08-12  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/CMakeLists.txt: Add -Wextra flag.

	* misc/ids_send.c (inject, injectv6), misc/kb_redis.c (select_database)
	(redis2kbitem, redis_get_pattern), misc/network.c (recv_line)
	(my_gnutls_transport_set_lowat_default), misc/openvas_auth.c
	(digest_hex, openvas_authenticate_classic), misc/openvas_logging.c
	(openvas_log_silent), misc/openvas_server.c (client_cert_callback)
	(openvas_server_vsendf_internal, my_gnutls_transport_set_lowat_default),
	misc/pcap.c (get_random_bytes), misc/plugutils.c (host_add_port_proto)
	(scanner_add_port, plug_get_key_sighand_term, plug_get_key_sigchld)
	(sig_term, sig_chld): Fix signedness and unused function parameters
	issues.

2015-08-12  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* omp/CMakeLists.txt: Add -Wextra flag.

	* omp/omp.c (omp_get_tasks, omp_get_targets), omp/xml.c
	(handle_start_element, handle_end_element, handle_text, handle_error)
	(foreach_print_attribute_format): Fix unused function parameters
	warning.

2015-08-12  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* base/credentials.h (credentials_t): Add field default_severity.

2015-08-11  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* omp/omp.c (omp_create_task_ext): Fix different signedness issue.

	* omp/omp.h (omp_get_report_opts_defaults, omp_get_tasks_opts_defaults)
	(omp_get_task_opts_defaults, omp_create_task_opts_defaults)
	(omp_get_system_reports_opts_defaults)
	(omp_create_lsc_credential_opts_defaults): Initialize appropriately.

2015-08-10  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/CMakeLists.txt: Add -Wextra.

	* base/nvti.c (nvti_free), base/openvas_hosts.c (openvas_host_type),
	base/openvas_networking.c (port_in_port_ranges): Fix signedness issue.
	(set_from_nvti): Rename to set_keyfile_info, don't take nvti parameter.
	(nvti_to_keyfile): Adjust set_keyfile_info() calls.

	* base/openvas_networking.h: Move down range_t definition.
