@@ -1,3 +1,9 @@
+2015-08-13  Hani Benhabiles <hani.benhabiles@greenbone.net>
+
+	* misc/ldap_connect_auth.c (ldap_auth_info_new)
+	(ldap_connect_authenticate, ldap_auth_info_free): Fix unused function
+	parameter warnings.
+
 2015-08-12  Hani Benhabiles <hani.benhabiles@greenbone.net>
 
 	* misc/CMakeLists.txt: Add -Wextra flag.
